# posthog-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  http-client.c  init.c  posthog.h
tests/: CMakeLists.txt  http-client.c  init.c  test.c  test.h
tests/attractor/: attractor.c  attractor.h
tools/: generate.py  generate.sh
